[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/UI/mm_background.png" type="Texture" id=1]
[ext_resource path="res://Assets/UI/Buttons/blue_button03.png" type="Texture" id=2]
[ext_resource path="res://Assets/UI/Buttons/blue_button05.png" type="Texture" id=3]
[ext_resource path="res://Resources/Fonts/KFN_40_outline1.tres" type="DynamicFont" id=4]
[ext_resource path="res://Scenes/UIScenes/MapMenu.gd" type="Script" id=5]

[node name="MapMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="B" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true

[node name="M" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 50
custom_constants/margin_top = 50
custom_constants/margin_left = 50
custom_constants/margin_bottom = 50

[node name="VB" type="VBoxContainer" parent="M"]
margin_left = 780.0
margin_top = 50.0
margin_right = 1230.0
margin_bottom = 670.0
rect_min_size = Vector2( 450, 0 )
size_flags_horizontal = 8
custom_constants/separation = 50
alignment = 1

[node name="Map1" type="TextureButton" parent="M/VB"]
margin_left = 50.0
margin_top = 60.0
margin_right = 400.0
margin_bottom = 135.0
rect_min_size = Vector2( 350, 75 )
size_flags_horizontal = 4
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
expand = true

[node name="Label" type="Label" parent="M/VB/Map1"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 0.705882 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.313726 )
custom_fonts/font = ExtResource( 4 )
text = "Map 1"
align = 1
valign = 1

[node name="Map2" type="TextureButton" parent="M/VB"]
margin_left = 50.0
margin_top = 185.0
margin_right = 400.0
margin_bottom = 260.0
rect_min_size = Vector2( 350, 75 )
size_flags_horizontal = 4
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
expand = true

[node name="Label" type="Label" parent="M/VB/Map2"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 0.705882 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.313726 )
custom_fonts/font = ExtResource( 4 )
text = "Map 2"
align = 1
valign = 1

[node name="Map3" type="TextureButton" parent="M/VB"]
margin_left = 50.0
margin_top = 310.0
margin_right = 400.0
margin_bottom = 385.0
rect_min_size = Vector2( 350, 75 )
size_flags_horizontal = 4
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
expand = true

[node name="Label" type="Label" parent="M/VB/Map3"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 0.705882 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.313726 )
custom_fonts/font = ExtResource( 4 )
text = "Map 3"
align = 1
valign = 1

[node name="Control" type="Control" parent="M/VB"]
margin_top = 435.0
margin_right = 450.0
margin_bottom = 435.0

[node name="Quit" type="TextureButton" parent="M/VB"]
margin_left = 50.0
margin_top = 485.0
margin_right = 400.0
margin_bottom = 560.0
rect_min_size = Vector2( 350, 75 )
size_flags_horizontal = 4
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
expand = true

[node name="Label" type="Label" parent="M/VB/Quit"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 0.705882 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.313726 )
custom_fonts/font = ExtResource( 4 )
text = "Quit"
align = 1
valign = 1
